--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
 }
 
 body{
-    height:100vh;
+    min-height:100vh;
     background:linear-gradient(180deg,#050505,#120000);
     display:flex;
     justify-content:center;
     align-items:center;
     color:#fff;
     transition:0.3s;
-    overflow: hidden; /* Evita barras de desplazamiento por las partículas */
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding-bottom: 80px; /* Espacio extra para evitar que la barra del cel tape contenido */
 }
 
 #particles {
@@ -45,26 +47,57 @@ body.success-bg{
 .wrapper{
     width:100%;
     max-width:450px;
-    padding:30px 20px; /* Padding base ajustado */
+    padding:20px;
     text-align:center;
     position: relative;
     z-index: 10;
-    background: rgba(10, 5, 5, 0.65);
-    backdrop-filter: blur(15px);
-    border: 1px solid rgba(255, 50, 50, 0.2);
-    border-radius: 20px;
-    box-shadow: 0 0 50px rgba(0, 0, 0, 0.8);
+    background: transparent;
+    border-radius: 15px;
+    box-shadow: 0 0 30px rgba(255, 204, 0, 0.15);
+    margin: 40px auto; /* Centrado seguro y espacio vertical */
+    overflow: hidden;
+}
+
+.wrapper::before {
+    content: '';
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
+    background: conic-gradient(#ffcc00, #ffcc00 40%, #ffffff 50%, #ffcc00 60%, #ffcc00);
+    animation: rotateBorder 4s linear infinite;
+    z-index: -2;
+}
+
+.wrapper::after {
+    content: '';
+    position: absolute;
+    inset: 3px;
+    background: linear-gradient(145deg, rgba(20, 20, 20, 0.95), rgba(40, 30, 0, 0.95));
+    border-radius: 12px;
+    z-index: -1;
+}
+
+@keyframes rotateBorder {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
 .title{
-    font-size:2.8rem;
+    font-size:1.5rem;
+    color:#000;
+    background: #ffcc00;
     font-weight:900;
-    letter-spacing:1px;
-    background: linear-gradient(to bottom, #ffffff, #ff4444);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    filter: drop-shadow(0 0 10px rgba(255, 0, 0, 0.6));
-    margin-bottom: 5px;
+    margin: -20px -20px 25px -20px;
+    padding: 20px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.5);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 50% 100%, 0 85%);
+    padding-bottom: 35px;
+    -webkit-text-fill-color: #000;
+    filter: none;
 }
 
 .subtitle{
@@ -196,10 +229,10 @@ body.success-bg{
 .hack-btn{
     display:block;
     width:100%;
-    padding:22px;
+    padding:16px;
     background:linear-gradient(135deg, #ff0000 0%, #990000 100%);
     color:#fff;
-    font-size:1.4rem;
+    font-size:1.1rem;
     font-weight:900;
     text-decoration:none;
     border: 1px solid rgba(255,255,255,0.2);
@@ -236,62 +269,72 @@ body.success-bg{
 .bypass-btn {
     display: block;
     width: 100%;
-    padding: 10px;
-    margin-bottom: 12px;
-    background: linear-gradient(90deg, #ff8800, #ff4400);
-    color: #fff;
+    padding: 15px;
+    margin: 10px 0 20px 0;
+    background: linear-gradient(45deg, #ffcc00, #ff8800);
+    color: #000;
     text-align: center;
     text-decoration: none;
-    border-radius: 6px;
-    font-weight: 800;
-    font-size: 0.8rem;
-    border: 1px solid rgba(255, 200, 0, 0.3);
+    border-radius: 50px;
+    font-weight: 900;
+    font-size: 1rem;
+    border: 2px solid #fff;
     text-transform: uppercase;
     letter-spacing: 1px;
-    box-shadow: 0 0 10px rgba(255, 100, 0, 0.3);
+    box-shadow: 0 0 25px rgba(255, 200, 0, 0.6);
     transition: 0.3s;
-    animation: verifyPulse 2s infinite;
+    animation: pulseWarning 2s infinite;
+    position: relative;
+    overflow: hidden;
 }
 .bypass-btn:hover {
-    background: linear-gradient(90deg, #ff9900, #ff5500);
-    box-shadow: 0 0 20px rgba(255, 100, 0, 0.6);
-    filter: brightness(1.2);
+    transform: scale(1.05);
+    box-shadow: 0 0 40px rgba(255, 200, 0, 0.8);
+    filter: brightness(1.1);
+}
+
+@keyframes pulseWarning {
+    0% { box-shadow: 0 0 0 0 rgba(255, 200, 0, 0.7); }
+    70% { box-shadow: 0 0 0 15px rgba(255, 200, 0, 0); }
+    100% { box-shadow: 0 0 0 0 rgba(255, 200, 0, 0); }
 }
 
 /* CHANGELOG */
 .changelog-container {
-    background: rgba(0, 0, 0, 0.4);
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    border-radius: 8px;
-    padding: 15px;
-    margin: 25px 0;
-    text-align: left;
-    box-shadow: inset 0 0 20px rgba(0,0,0,0.5);
+    background: linear-gradient(145deg, rgba(20, 20, 20, 0.9), rgba(40, 30, 0, 0.9));
+    border: 2px solid #ffcc00;
+    border-radius: 15px;
+    padding: 20px;
+    margin: 30px 0;
+    text-align: center;
+    box-shadow: 0 0 30px rgba(255, 204, 0, 0.15);
     position: relative;
     overflow: hidden;
 }
 
 .changelog-container::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 3px;
-    height: 100%;
-    background: #ff3333;
+    display: none;
 }
 
 .changelog-header {
-    font-size: 1rem;
-    color: #fff;
-    font-weight: bold;
-    margin-bottom: 12px;
+    font-size: 1.2rem;
+    color: #000;
+    background: #ffcc00;
+    font-weight: 900;
+    margin: -20px -20px 15px -20px;
+    padding: 15px;
     text-transform: uppercase;
     letter-spacing: 1px;
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 8px;
-    text-shadow: 0 0 5px red;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.5);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 50% 100%, 0 85%);
+    padding-bottom: 25px;
+    animation: none;
+    border: none;
+    border-radius: 0;
 }
 
 .changelog-list {
@@ -303,14 +346,15 @@ body.success-bg{
 .changelog-item {
     display: flex;
     align-items: center;
-    font-size: 0.95rem;
+    justify-content: flex-start;
+    font-size: 0.9rem;
     color: #eee;
     margin-bottom: 8px;
-    padding: 8px 10px;
-    background: rgba(255, 255, 255, 0.02);
-    border-radius: 6px;
+    padding: 10px 15px;
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 8px;
+    border: 1px solid rgba(255, 255, 255, 0.1);
     transition: 0.3s;
-    border-left: 1px solid transparent;
 }
 
 .changelog-item:last-child {
@@ -318,45 +362,126 @@ body.success-bg{
 }
 
 .changelog-item:hover {
-    background: rgba(255, 255, 255, 0.05);
+    background: rgba(255, 204, 0, 0.1);
+    border-color: #ffcc00;
     transform: translateX(5px);
-    border-left: 3px solid #00ff88;
 }
 
 .check-icon {
-    color: #00ff88;
-    margin-right: 10px;
+    color: #ffcc00;
+    margin-right: 12px;
     width: 18px;
     height: 18px;
     min-width: 18px;
-    filter: drop-shadow(0 0 4px #00ff88);
+    filter: drop-shadow(0 0 5px #ffcc00);
 }
 
-/* REDES */
-.socials{
-    display:flex;
-    justify-content:center;
-    gap:15px;
-    margin-top:15px;
+/* BOTON GRUPO WHATSAPP */
+.whatsapp-group-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 12px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    background: linear-gradient(90deg, #25D366, #075E54);
+    color: #fff;
+    text-decoration: none;
+    border-radius: 8px;
+    font-weight: 800;
+    font-size: 0.95rem;
+    border: 1px solid rgba(37, 211, 102, 0.5);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    box-shadow: 0 0 15px rgba(37, 211, 102, 0.3);
+    transition: 0.3s;
+    animation: whatsappPulse 2s infinite;
+    gap: 8px;
 }
 
-.socials a{
-    color:#fff;
-    text-decoration:none;
-    font-size:0.9rem;
-    padding:10px 18px;
-    background: rgba(255, 255, 255, 0.05);
-    border:1px solid rgba(255, 255, 255, 0.1);
-    border-radius:6px;
-    transition:0.3s;
-    font-weight: 600;
-}
-
-.socials a:hover{
-    background:#ff0000;
-    box-shadow:0 0 20px #ff0000;
-    border-color: #ff0000;
+.whatsapp-group-btn:hover {
     transform: translateY(-2px);
+    box-shadow: 0 0 25px rgba(37, 211, 102, 0.6);
+    filter: brightness(1.1);
+}
+
+@keyframes whatsappPulse {
+    0% { box-shadow: 0 0 0 0 rgba(37, 211, 102, 0.7); }
+    70% { box-shadow: 0 0 0 10px rgba(37, 211, 102, 0); }
+    100% { box-shadow: 0 0 0 0 rgba(37, 211, 102, 0); }
+}
+
+/* BOTON YOUTUBE */
+.youtube-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 12px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    background: linear-gradient(90deg, #FF0000, #8B0000);
+    color: #fff;
+    text-decoration: none;
+    border-radius: 8px;
+    font-weight: 800;
+    font-size: 0.95rem;
+    border: 1px solid rgba(255, 0, 0, 0.5);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    box-shadow: 0 0 15px rgba(255, 0, 0, 0.3);
+    transition: 0.3s;
+    animation: youtubePulse 2s infinite;
+    gap: 8px;
+}
+
+.youtube-btn:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 0 25px rgba(255, 0, 0, 0.6);
+    filter: brightness(1.1);
+}
+
+@keyframes youtubePulse {
+    0% { box-shadow: 0 0 0 0 rgba(255, 0, 0, 0.7); }
+    70% { box-shadow: 0 0 0 10px rgba(255, 0, 0, 0); }
+    100% { box-shadow: 0 0 0 0 rgba(255, 0, 0, 0); }
+}
+
+/* BOTON TIKTOK */
+.tiktok-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 12px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    background: linear-gradient(90deg, #000000, #333333);
+    color: #fff;
+    text-decoration: none;
+    border-radius: 8px;
+    font-weight: 800;
+    font-size: 0.95rem;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
+    transition: 0.3s;
+    animation: tiktokPulse 2s infinite;
+    gap: 8px;
+}
+
+.tiktok-btn:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 0 25px rgba(255, 255, 255, 0.4);
+    filter: brightness(1.1);
+}
+
+@keyframes tiktokPulse {
+    0% { box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.4); }
+    70% { box-shadow: 0 0 0 10px rgba(255, 255, 255, 0); }
+    100% { box-shadow: 0 0 0 0 rgba(255, 255, 255, 0); }
 }
 
 /* SWITCH */
@@ -376,19 +501,19 @@ body.success-bg{
 
 @media(max-width:480px){
     .wrapper {
-        padding: 25px 15px; /* Menos padding en móviles */
-        border: none; /* Quitar borde para más espacio */
+        padding: 20px;
+        border: 2px solid #ffcc00;
     }
     .title{
-        font-size:2.2rem; /* Tamaño de título ajustado */
+        font-size:1.3rem;
     }
     .step-btn {
         padding: 15px;
         font-size: 1rem;
     }
     .hack-btn { 
-        font-size: 1.2rem; 
-        padding: 18px; 
+        font-size: 1rem; 
+        padding: 15px; 
     }
 }
 
@@ -530,7 +655,7 @@ body.success-bg{
 
 <div class="wrapper">
 
-    <div class="title" style="margin-top: 15px; margin-bottom: 30px;">FREE FIRE PANELES</div>
+    <div class="title">FREE FIRE PANELES</div>
 
     <!-- INFO DISPOSITIVO -->
     <div id="deviceInfo" style="font-size:0.75rem; color:#aaa; margin-bottom:15px; background:rgba(255,0,0,0.1); padding:5px 10px; border-radius:5px; display:inline-block; border:1px solid rgba(255,0,0,0.3);">📱 Escaneando dispositivo...</div>
@@ -572,12 +697,23 @@ body.success-bg{
         </ul>
     </div>
 
-    <!-- REDES -->
-    <div class="socials">
-        <a href="https://youtube.com/@gamenexo11?si=ihC_JyZQHESbKXt7">YouTube</a>
-        <a href="https://whatsapp.com/channel/0029VbBd5qbIiRovkgdMWf0L">WhatsApp</a>
-        <a href="https://www.tiktok.com/@el_parche_yt0?_r=1&_t=ZS-93ocfQ27VuW">TikTok</a>
-    </div>
+    <!-- BOTON GRUPO WHATSAPP -->
+    <a href="https://chat.whatsapp.com/TU_ENLACE_AQUI" class="whatsapp-group-btn" target="_blank">
+        <svg class="btn-icon" viewBox="0 0 24 24"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/></svg>
+        GRUPO DE WHATSAPP
+    </a>
+
+    <!-- BOTON YOUTUBE -->
+    <a href="https://youtube.com/@gamenexo11?si=ihC_JyZQHESbKXt7" class="youtube-btn" target="_blank">
+        <svg class="btn-icon" viewBox="0 0 24 24"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"/></svg>
+        CANAL DE YOUTUBE
+    </a>
+
+    <!-- BOTON TIKTOK -->
+    <a href="https://www.tiktok.com/@el_parche_yt0?_r=1&_t=ZS-93ocfQ27VuW" class="tiktok-btn" target="_blank">
+        <svg class="btn-icon" viewBox="0 0 24 24"><path d="M12.525.02c1.31-.02 2.61-.01 3.91-.02.08 1.53.63 3.09 1.75 4.17 1.12 1.11 2.7 1.62 4.24 1.79v4.03c-1.44-.05-2.89-.35-4.2-.97-.57-.26-1.1-.59-1.62-.93v6.16c0 2.52-1.12 4.84-2.98 6.38-2.24 1.84-5.27 2.43-8.13 1.56-2.52-.77-4.57-2.79-5.33-5.3-1.05-3.48.79-7.12 4.14-8.13.32-.1.66-.18.99-.24v4.03c-.42.05-.83.16-1.2.33-1.26.57-2.05 1.86-1.94 3.24.11 1.54 1.18 2.86 2.72 3.12 1.8.31 3.63-.79 4.24-2.47.27-.74.35-1.54.24-2.33V.02z"/></svg>
+        TIKTOK
+    </a>
 
     <!-- AUDIOS -->
     <audio id="audio-download" src="Descarga.mp3"></audio>
